--- a/task_v2.html
+++ b/task_v2.html
@@ -12,7 +12,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column; /* Align items in a column */
       height: 100vh;
       margin: 0;
     }
@@ -43,7 +42,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: center;
+      text-align: left;
       font-size: 16px;
       color: #21243d;
       font-family: Heebo;
@@ -53,17 +52,12 @@
     .navigation-menu {
       list-style: none;
       padding: 0;
-      display: flex;
-      justify-content: center;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      background-color: #ffffff; /* Optional: Add background color */
+      text-align: center;
     }
 
     .navigation-menu li {
       margin: 10px;
+      display: inline-block;
     }
 
     .button-link {
