--- a/task_v2.html
+++ b/task_v2.html
@@ -12,6 +12,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
       height: 100vh;
       margin: 0;
     }
@@ -25,6 +26,7 @@
       padding: 0;
       display: flex;
       justify-content: center;
+      margin: 0;
     }
 
     a {
@@ -53,6 +55,11 @@
       list-style: none;
       padding: 0;
       text-align: center;
+      position: absolute;
+      top: 0;
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Adjust for half the width of the menu */
+      background-color: #ffffff;
     }
 
     .navigation-menu li {
