--- a/task_v2.html
+++ b/task_v2.html
@@ -57,7 +57,8 @@
       text-align: center;
       position: absolute;
       top: 0;
-      width: 100%; /* Take full width */
+      left: 0;
+      right: 0;
       background-color: #ffffff;
     }
 
