--- a/task_v2.html
+++ b/task_v2.html
@@ -38,8 +38,8 @@
     .home {
       position: relative;
       background-color: #fff;
-      width: 100vw;
-      height: 100vh;
+      max-width: 800px; /* Adjust the value as needed */
+      width: 100%;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
@@ -48,7 +48,7 @@
       font-size: 16px;
       color: #21243d;
       font-family: Heebo;
-      margin-left: 400px;
+      padding: 20px; /* Add padding as needed */
     }
 
     .navigation-menu {
