--- a/task_v2.html
+++ b/task_v2.html
@@ -48,7 +48,7 @@
       font-size: 16px;
       color: #21243d;
       font-family: Heebo;
-      padding: 20px; /* Add padding as needed */
+      padding: 20px;
     }
 
     .navigation-menu {
