--- a/task_v2.html
+++ b/task_v2.html
@@ -15,6 +15,7 @@
       flex-direction: column;
       height: 100vh;
       margin: 0;
+      overflow: hidden; /* Hide the scrollbar */
     }
 
     nav {
