--- a/task_v2.html
+++ b/task_v2.html
@@ -108,9 +108,9 @@
     <nav>
       <ul class="navigation-menu">
         <li><a id="button1" class="button-link" href="#main">Main</a></li>
-        <li><a class="button-link" href="#about-me">About Someone</a></li>
-        <li><a class="button-link" href="#practical-works">Practical Works</a></li>
-        <li><a class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
+        <li><a id="button1" class="button-link" href="#about-me">About Someone</a></li>
+        <li><a id="button1" class="button-link" href="#practical-works">Practical Works</a></li>
+        <li><a id="button1" class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
       </ul>
     </nav>
       <div class="download-resume">Download Resume</div>
